# gazebo-mental-simulation-meta-example

./: .rosinstall  CMakeLists.txt  README.md  package.xml
config/: pr2.srdf  pr2.yaml
launch/: empty_world.launch  pr2_bringup.launch  pr2_run_experiment.launch  pr2_startup_simulation.launch
scripts/: pr2_experiment_template.py
worlds/: empty.world  empty_super_realtime.world  pr2_scene3_4obj.world  pr2_scene4_4obj.world  pr2_scene9_5obj.world
worlds/parcelrobot/: parcelrobot_4obj-0-0.world  parcelrobot_4obj-0-1.world  parcelrobot_4obj-0-2.world  parcelrobot_4obj-0-3.world  parcelrobot_4obj-0-4.world  parcelrobot_4obj-1-0.world  parcelrobot_4obj-1-1.world  parcelrobot_4obj-1-2.world  parcelrobot_4obj-1-3.world  parcelrobot_4obj-1-4.world  parcelrobot_4obj-10-0.world  parcelrobot_4obj-10-1.world  parcelrobot_4obj-10-2.world  parcelrobot_4obj-10-4.world  parcelrobot_4obj-11-0.world  parcelrobot_4obj-11-1.world  parcelrobot_4obj-11-3.world  parcelrobot_4obj-12-0.world  parcelrobot_4obj-12-1.world  parcelrobot_4obj-12-2.world  parcelrobot_4obj-12-3.world  parcelrobot_4obj-12-4.world  parcelrobot_4obj-13-0.world  parcelrobot_4obj-13-1.world  parcelrobot_4obj-13-2.world  parcelrobot_4obj-13-3.world  parcelrobot_4obj-13-4.world  parcelrobot_4obj-14-0.world  parcelrobot_4obj-14-1.world  parcelrobot_4obj-14-2.world  parcelrobot_4obj-14-3.world  parcelrobot_4obj-14-4.world  parcelrobot_4obj-15-0.world  parcelrobot_4obj-15-1.world  parcelrobot_4obj-15-2.world  parcelrobot_4obj-15-3.world  parcelrobot_4obj-15-4.world  parcelrobot_4obj-16-0.world  parcelrobot_4obj-16-1.world  (+352 more)
(+3 files in other folders)
